--- a/chris/public/index.html
+++ b/chris/public/index.html
@@ -7,18 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-  <title>Chris Fetterolf | Student, Developer, &amp; Designer</title>
+  <title>Chris Fetterolf</title>
   <meta name="description" content="This is the home page of Chris Fetterolf, a software developer and student at Middlebury College.">
   <meta name="author" content="Chris Fetterolf">
 
   <!-- Icon -->
   <link rel="icon" href="img/logo.png" type="image/png">
-
-  <!-- Open Graph - for social Media use -->
-  <meta prefix="og: http://ogp.me/ns#" property='og:title' content="Chris Fetterolf - Student, Developer, Designer" />
-  <meta prefix="og: http://ogp.me/ns#" property='og:image' content="http://media.chrisfetterolf.com/img/thumbnail.jpg" />
-  <meta prefix="og: http://ogp.me/ns#" property="og:description" content="This is the home page of Chris Fetterolf, a software developer and student at Middlebury College.  Read about my past experience, download my resume, and more." />
-  <meta prefix="og: http://ogp.me/ns#" property="og:url" content="http://www.chrisfetterolf.com" />
 
   <!-- FONT -->
   <script src="https://use.typekit.net/dru0rgp.js"></script>
@@ -33,8 +27,14 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
+
+  <!-- Include the plugin's CSS and JS: -->
+  <script type="text/javascript" src="js/bootstrap-multiselect.js"></script>
+  <link rel="stylesheet" href="css/bootstrap-multiselect.css" type="text/css"/>
 
   <link rel="icon" type="image/png" href="img/favicon.png">
 
@@ -48,7 +48,7 @@
       <button class="navbar-toggler navbar-toggler-right hover-click" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="http://www.chrisfetterolf.com"><strong>Login Template</strong></a>
+      <a class="navbar-brand" href="http://www.chrisfetterolf.com"><strong>Form Template</strong></a>
     </nav> <!-- ./Navbar -->
 
     <!-- Page Content -->
@@ -57,13 +57,16 @@
         <form>
 
           <!-- Name -->
-          <div class="form-group">
-            <label for="formGroupExampleInput">Name</label>
-            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Enter your name">
+          <div><h4>Info</h4></div>
+          <div class="form-group row">
+            <label for="monday" class="col-sm-2 col-form-label">Name</label>
+            <div class="col-sm-10">
+              <input class="form-control" id="nameInput" placeholder="First and Last">
+            </div>
           </div>
 
           <!-- Member/Leader -->
-          <div class="form-check form-check-inline active">
+          <div class="form-check form-check-inline active mt-sm">
             <label class="form-check-label">
               <input class="form-check-input" type="checkbox" id="memberCheckbox" value="option1" checked="checked"> Member</input>
             </label>
@@ -71,6 +74,24 @@
           <div class="form-check form-check-inline">
             <label class="form-check-label">
               <input class="form-check-input" type="checkbox" id="leaderCheckbox" value="option2"> Leader</input>
+            </label>
+          </div>
+
+          <!-- Preferred Leaders -->
+          <div class="mt-lg"><h4>Choose Leaders</h4></div>
+          <div class="form-check form-check-inline active mt-sm">
+            <label class="form-check-label">
+              <input class="form-check-input leaderCheckbox" type="checkbox" id="mariaCheckbox" value="maria"> Maria</input>
+            </label>
+          </div>
+          <div class="form-check form-check-inline">
+            <label class="form-check-label">
+              <input class="form-check-input leaderCheckbox" type="checkbox" id="paulCheckbox" value="paul"> Paul</input>
+            </label>
+          </div>
+          <div class="form-check form-check-inline">
+            <label class="form-check-label">
+              <input class="form-check-input leaderCheckbox" type="checkbox" id="sidCheckbox" value="sid"> Sid</input>
             </label>
           </div>
 
@@ -82,13 +103,17 @@
             </div>
           </div>
         </form>
+
+        <button class="btn btn-success mt-sm submit">Submit</button>
     </div>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/popper/popper.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <div class="mt-lg" id="submitResults" style="display: none">
+      <span><h3>Name:</h3><h5 id="name"></h5></span>
+      <span><h3>Member:</h3><h5 id="member"></h5></span>
+      <span><h3>Leader:</h3><h5 id="leader"></h5></span>
+      <span><h3>Leaders:</h3><h5 id="leaders"></h5></span>
 
+    </div>
   </body>
 
 <!-- Essential Bootstrap -->
@@ -96,6 +121,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 
 <script src="js/smoothScroll.js"></script>
+<script src="js/demo.js"></script>
 
 </body>
 </html>
